k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: job-manager-sa
      containers:
        - name: api
          image: api
          imagePullPolicy: Never
          ports:
            - name: api
              containerPort: 8000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
    - port: 8000
      targetPort: 8000
      name: api
  selector:
    app: api
  type: ClusterIP
