k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
spec:
  ingressClassName: kong
  rules:
    - host: null
      http:
        paths:
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
